[Feat] Add better text to html

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Metrics App</h1>
+        <h1>Nelson Metrics</h1>
     </header>
     <main>
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>&copy; 2023 Metrics App</p>
+        <p>&copy; 2025 Nelson Metrics</p>
     </footer>
     {% block scripts %}{% endblock %}
 </body>
